src/objects/Model__c.object
<CustomObject>
    <fields>
        <fullName>Validation_Assessment_Reporting__c</fullName>
        <formula>IF( 
AND( 
Validation_Score_2__c &gt;= 8, 
Validation_Grade__c == &quot;A&quot; 
), 
&quot;Mature&quot;, 
IF( 
AND( 
Validation_Score_2__c &gt;= 5.5, 
OR( 
Validation_Grade__c == &quot;A&quot;, 
Validation_Grade__c == &quot;B&quot; 
) 
), 
&quot;Intermediate&quot;, 
&quot;Initial&quot; 
) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Validation Assessment - Reporting</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Validation_Grade__c</fullName>
        <formula>IF(AND(
IF(Data__c, True, False),
IF(Assumptions__c, True, False),
IF(Methodology__c, True, False),
IF(Calculation__c, True, False),
IF(Model_Architecture__c, True, False),
IF(Model_Results__c, True, False),
IF(ISPICKVAL(Independent_Model_Review__c,&quot;Yes&quot;), True, False)
),&quot;A&quot;,
IF(AND(
IF(Data__c, True, False),
IF(Assumptions__c, True, False),
IF(Methodology__c, True, False),
IF(Calculation__c, True, False)
),&quot;B&quot;,&quot;C&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Validation Grade</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Validation_Score_2__c</fullName>
        <formula>(Validation_Score__c / 45) * 10</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% of POINTS (Validation)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Validation_Score__c</fullName>
        <formula>IF( Data__c ,6.3,0)+
IF( Assumptions__c ,6.3,0)+
IF( Methodology__c ,6.3,0)+
IF( Calculation__c ,6.3,0)+
IF( Model_Architecture__c ,3.6,0)+
IF( Model_Results__c ,3.6,0)+
IF( ISPICKVAL(Independent_Model_Review__c,&quot;Yes&quot;) ,3.6,0)+
IF( Model_Integrity__c ,1.5,0)+
IF( Reviewer_Qualifications_Trainings__c ,2.7,0)+
IF( Monitoring_Procedure__c ,1.5,0)+
IF( Model_Validation_Triggers__c ,1.8,0)+
IF( Model_Modification_Procedure__c ,1.5,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Validation Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Validation_Section_Level__c</fullName>
        <formula>IMAGE(
	IF(
		AND(
			Validation_Score_2__c &gt;= 8,
			Validation_Grade__c == &quot;A&quot;
		),
		&quot;/servlet/servlet.FileDownload?file=015M0000000C3yf&quot;,
		IF(
			AND(
				Validation_Score_2__c &gt;= 5.5,
				OR(
					Validation_Grade__c == &quot;A&quot;,
					Validation_Grade__c == &quot;B&quot;
				)
			),
		&quot;/servlet/servlet.FileDownload?file=015M0000000C3yz&quot;,
		&quot;/servlet/servlet.FileDownload?file=015M0000000C3yu&quot;
		)
	),&quot;&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This assesses the model validation efforts based on the model mgmt. components in place. Initial-the starting point with little to no model mgmt. or have missing critical components; Intermediate-formal model mgmt. in place; Mature-strong model mgmt.</inlineHelpText>
        <label>Validation Assessment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year_of_Model_Developed__c</fullName>
        <label>Year Model Developed</label>
        <picklist>
            <picklistValues>
                <fullName>2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2010</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2009</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2008</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2007</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2005</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2004</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2003</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2002</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2001</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prior to 2000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Model</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Use_of_Model__c</columns>
        <columns>Department__c</columns>
        <columns>Model_Status__c</columns>
        <columns>Total_Section_Level__c</columns>
        <columns>Date_of_Last_Review__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Model</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Models</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>